<resources>
  <string name="app_name">Ur Lineups</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_desc">Navigation header</string>

  <string name="menu_todolist">Todo Lists</string>
  <string name="menu_profile">Profile</string>
  <string name="menu_exit">Logout</string>


  <string name="loginErrorMessage">Check the username and password. Please!</string>
  <string name="wrongEmailErrorMessage">Email is not registered yet!</string>
  <string name="todoListPageTitle">Hello, %1s</string>
  <string name="todoListPageSubTitle">Welcome to UR Lineups</string>

  <string name="loginTitle">Sıgn In</string>
  <string name="loginUserTitle">Username</string>
  <string name="loginPassTitle">Password</string>
  <string name="loginSignInTitle">S ı g n  I n</string>
  <string name="loginNoAccountTitle">Do you have not an account? </string>
  <string name="loginSignUpTitle">Sign Up</string>
  <string name="loginUserNameError">Please fill the Username field!</string>
  <string name="forgetPassEmailError">Please fill the Email field!</string>
  <string name="loginPasswordError">Please fill the Password field!</string>
  <string name="signUpSuccessMessage">SignUp Success!</string>
  <string name="signUpErrorMessage">Registration is available. Please check E-Mail or Username!</string>
  <string name="forgetPasswordTitle">Forget Password</string>
  <string name="clickHere">Click Here</string>
  <string name="forgetPassEmail">Email</string>
  <string name="forgetPassCode">Enter Code</string>
  <string name="newPassword">New Password</string>
  <string name="sendCodeText">Send code</string>
  <string name="resetPassword">R E S E T   P A S S W O R D</string>

  <string name="todoListSearch">Search Lineups…</string>
  <string name="todoListItemSearch">Search Lineup Tasks…</string>

  <string name="todoListPriorityLow">Low</string>
  <string name="todoListPriorityNormal">Normal</string>
  <string name="todoListPriorityHigh">High</string>

  <string name="signUpNameHint">Name &amp; Surname</string>
  <string name="signUpUserNameHint">Username</string>
  <string name="signUpPasswordHint">Password</string>
  <string name="signUpEmailHint">E-Mail Address</string>
  <string name="signUpBtnSubmit">SUBMIT</string>


  <string name="shortcutAddTodoListCode">addtodolist</string>

  <string name="signUpNameError">Please fill the Name &amp; Surname!</string>
  <string name="signUpUserNameError">Please fill the Username!</string>
  <string name="signUpPasswordError">Please fill the Password!</string>
  <string name="signUpEmailError">Please fill the E-Mail Address!</string>
  <string name="hasAccountTitle">Already have an account? </string>

  <string name="todolistAddListNameError">Please fill the List Name!</string>

  <string name="todolistAddListItemNameError">Please fill the List Item Name!</string>
  <string name="todolistAddListItemDescError">Please fill the List Description Name!</string>


  <string name="todoListItemDesc"><b>Description:</b> %1s</string>
  <string name="todoListItemCreateDate"><b>Create Date:</b> %1s</string>
  <string name="todoListItemRemainingDate">%1s days left.</string>
  <string name="todoListItemStatusContinue">Pending</string>
  <string name="todoListItemStatusCompleted">Completed</string>
  <string name="todoListItemStatusExpired">Delayed</string>
  <string name="todolistTitle">To Do List</string>
  <string name="todolistItemTitle">%1s Tasks</string>


  <string name="todoListMoreUpdate">Update</string>
  <string name="todoListMoreDelete">Delete</string>
  <string name="todoListMoreShare">Share</string>

  <string name="todolistShareBottomSheetPreview">View as PDF</string>
  <string name="todolistShareBottomSheetEmail">Email Selected List</string>

  <string name="todolistPdfExportMailSubject">About ToDoList</string>
  <string name="todolistPdfExportMailInfo">Sending Mail…</string>
  <string name="YES">Yes</string>
  <string name="CANCEL">Cancel</string>


  <string name="todoListItemDeleteTask">Lineup Task Deleted</string>
  <string name="todoListItemDeleteTaskMessage">Do you want to delete Todo List Task?</string>
  <string name="todoListItemEndTask">Lineup Task Finished</string>
  <string name="todoListItemEndTaskMessage">Are you sure want to finish task status?</string>
  <string name="todoListItemDelete">Delete</string>
  <string name="todoListItemUpdate">Update</string>
  <string name="todoListItemComplete">Complete</string>
  <string name="todoListItemDialogHeaderNewItem">Create Your Lineup!</string>
  <string name="todoListItemDialogHeaderUpdateItem">Update Lineup Task</string>
  <string name="todoListItemDialogSubmitNew">Create</string>
  <string name="todoListItemDialogSubmitUpdate">Update</string>
  <string name="todoListItemDialogClose">Close</string>
  <string name="todoListItemDialogName">List Item Name</string>
  <!--    <string name="todoListItemDialogDeadline">List Item Deadline</string>-->
  <string name="todoListItemDialogDeadline">Due Date</string>
  <!--    <string name="todoListItemDialogDescription">List Item Description</string>-->

  <string name="todoListItemDialogDescription">Description</string>
  <string name="todoListDialogHeaderCreate">Create Lineup</string>
  <string name="todoListDialogHeaderUpdate">Update Lineup</string>
  <string name="todoListDialogName">Lineup Name</string>
  <string name="todoListDialogPriority">Lineup Priority</string>
  <string name="todoListEmptyMessage">Add new lineups from + button</string>
  <string name="todoListItemsEmptyMessage">Add Lineup tasks with + button</string>


  <string name="todoListItemDeleteMessage">Lineup Task is deleted.</string>
  <string name="todoListItemStatusMessage">Lineup Task is finished.</string>
  <string name="todoListItemUpdateMessage">Lineup Task is updated.</string>
  <string name="todoListItemCreateMessage">Lineup Task is created.</string>

  <string name="todoListDeleteMessage">Lineup is deleted.</string>
  <string name="todoListStatusMessage">Lineup is finished.</string>
  <string name="todoListUpdateMessage">Lineup is updated.</string>
  <string name="todoListCreateMessage">Lineup is created.</string>
  <string name="todoListPriority">Priority</string>
  <string name="todoListFilterKeyword">Type keyword</string>
  <string name="todoListFilterStatus">Status</string>
  <string name="todoListFilterCompleted">Completed</string>
  <string name="todoListFilterContinued">Continued</string>
  <string name="todoListFilterExpired">Expired</string>

  <string name="pdfStatusCompleted">Completed</string>
  <string name="pdfStatusContinued">Continued</string>
  <string name="pdfColumnFirst">Number</string>
  <string name="pdfColumnSecond">Name</string>
  <string name="pdfColumnThird">Description</string>
  <string name="pdfColumnFourth">Deadline</string>
  <string name="pdfColumnFifth">Create Date</string>
  <string name="pdfColumnSixth">Status</string>

  <string name="todoListShareCreatePdfMessage">Pdf Creator: %1s</string>
  <string name="todoListShareSendMailMessage">Sending Mail…</string>
  <string name="search">Search</string>
  <string name="pdfStatusExpired">Expired</string>
  <string name="todoListContinuedCount">%1s Tasks</string>


</resources>
