<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mdtp_white"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivExpandLogo"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/spacing_middle"
            android:tint="@color/grey_60"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_expand_arrow" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Item Name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_80" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvItemStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:text="Status"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                    <TextView
                        android:id="@+id/tvRemainingDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:layout_marginRight="@dimen/spacing_small"
                        android:gravity="end"
                        android:text="Remaining Day"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                </LinearLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/tvItemDeadlineDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="top"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_small"
                android:text="Item Date"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/colorPrimaryLight" />
        </RelativeLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressDeadline"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:progressTint="@color/green_500" />

    <LinearLayout
        android:id="@+id/expandView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_3"
        android:padding="10dp"
        android:orientation="vertical"

        android:visibility="visible">

        <TextView
            android:id="@+id/tvItemDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:text="Item Desc"
            android:textColor="#000"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <TextView
            android:id="@+id/tvItemCreateDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginRight="@dimen/spacing_large"
            android:text="Item Create Date"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#000" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@color/grey_10" />

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:id="@+id/llActionLayout"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/layoutDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_middle"
                android:layout_marginLeft="@dimen/spacing_middle"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/btn_rounded_red_outline"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="20sp"
                    android:layout_gravity="center"
                    android:tint="@color/red_500"
                    app:srcCompat="@drawable/ic_delete" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_xsmall"
                    android:layout_marginRight="@dimen/spacing_xsmall"
                    android:gravity="center_vertical"
                    android:text="@string/todoListItemDelete"
                    android:textColor="@color/red_700"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutEdit"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_rounded_blue_outline"
                android:orientation="horizontal">

                <ImageView
                  android:layout_width="20dp"
                  android:layout_height="20dp"
                  android:layout_marginLeft="10sp"
                    android:layout_gravity="center"
                    android:tint="@color/blue_500"
                    app:srcCompat="@drawable/ic_edit" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_xsmall"
                    android:layout_marginRight="@dimen/spacing_xsmall"
                    android:gravity="center_vertical"
                    android:text="@string/todoListItemUpdate"
                    android:textColor="@color/blue_700"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutEnded"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/btn_rounded_green_outline"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10sp"
                    android:layout_gravity="center"
                    android:tint="@color/green_500"
                    app:srcCompat="@drawable/ic_check" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_xsmall"
                    android:layout_marginRight="@dimen/spacing_xsmall"
                    android:gravity="center_vertical"
                    android:text="@string/todoListItemComplete"
                    android:textColor="@color/green_700"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>